Finalizaçao dos botoes de avançar e voltar e alguns ajustes do botao play

--- a/frontend/src/components/Player/styles.module.scss
+++ b/frontend/src/components/Player/styles.module.scss
@@ -99,12 +99,14 @@
 
   margin-top: 2.5rem;
   gap: 1.5rem;
+  
 
   button{
     background: transparent;
     border: 0;
     font-size: 0;
     transition: filter 0.2s;
+    cursor: pointer;
 
     &:disabled{
       cursor: default;
